Corrijo ruta de imágenes en index.html y agrego imágenes

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,12 @@
             <div class="lado-derecho">
                 <img src="{{ url_for('static', filename='Imagenes/coctel-en-mesa-de-madera-en-el-restaurante.jpg') }}" alt="Interior del restaurante" class="imagen-fondo">
                 <a href="{{ url_for('registro') }}" class="btn-inicio">Registrarse</a>
-                <a href="{{ url_for('login') }}" class="btn-registro">Iniciar sesión</a> 
+                <a href="{{ url_for('login') }}" class="btn-inicio">Iniciar sesión</a> 
             </div>
         </div>
 
         <footer>
-            <!-- CORRECTO: coma agregada y comillas bien colocadas -->
-            <img src="{{ url_for('static', filename='Imagenes/coctel-en-mesa-de-madera-en-el-restaurante.jpg') }}" alt="ilustracion de restaurante">
+             <img src="{{ url_for('static', filename='Imagenes/coctel-en-mesa-de-madera-en-el-restaurante.jpg') }}" alt="ilustracion de restaurante">
         </footer>
 
     </body>
