Corrijo posicion del boton registrarse

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="lado-derecho">
                 <img src="{{ url_for('static', filename='Imagenes/coctel-en-mesa-de-madera-en-el-restaurante.jpg') }}" alt="Interior del restaurante" class="imagen-fondo">
-                <a href="{{ url_for('registro') }}" class="btn-inicio">Registrarse</a>
+                <a href="{{ url_for('registro') }}" class="btn-registro">Registrarse</a>
                 <a href="{{ url_for('login') }}" class="btn-inicio">Iniciar sesión</a> 
             </div>
         </div>
