actualizacion de imagenes

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="contenedor">
             <div class="lado-izquierdo">
-                <img src="{{ url_for('static', filename='Imagenes/logo.jpg') }}" alt="logo Dunki Gatos" class="logo">
+                <img src="{{ url_for('static', filename='Imagenes/Logo.jpg') }}" alt="logo Dunki Gatos" class="logo">
                 <h1 class="titulo">¡Hola, partnerDunki!</h1>
                 <h2 class="subtitulo">Bienvenido</h2>                
                 <p class="descripcion">Restaurante</p>
