--- a/templates/productos.html
+++ b/templates/productos.html
@@ -2,23 +2,30 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Catálogo de Productos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='estilo.css') }}">
+    <title>Productos - Dunki Gatos</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='productos.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>🛍️ Catálogo de Productos</h1>
+    <div class="contenedor">
+        <h1>Grupo de Productos</h1>
 
-    {% for c in categoria %}
-        <h2>{{ c.nombre }}</h2>
-        <ul>
-            {% for p in producto %}
-                {% if p.categoria_id == c.id %}
-                    <li>{{ p.nombre }} - {{ p.descripcion }} - ${{ p.precio }}</li>
-                {% endif %}
-            {% endfor %}
-        </ul>
-    {% endfor %}
-
-    <a href="{{ url_for('inicio') }}">⬅️ Volver al inicio</a>
+        {% for categoria in categorias %}
+            <h2 class="categoria">{{ categoria.plato-fuerte }}</h2>
+            <div class="grid-productos">
+                {% for producto in categoria.productos %}
+                    <div class="producto">
+                        <img src="{{ url_for('static', filename='Imagenes/plato-fuerte.jpg') }}" alt="{{ plato-fuerte }}">
+                        <h3>{{ producto.nombre }}</h3>
+                        <p class="descripcion">{{ Pasta Pesto }}</p>
+                        <p class="precio">$ {{ 25000 }}</p>
+                        <button class="btn-seleccionar">Seleccionar</button>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
+
+
