--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Categorías - Dunki Gatos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='categorias.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='categoria.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -11,19 +11,25 @@
         <h1>Elige una categoría</h1>
 
         {% set imagenes = {
-            'PLATO PRINCIPAL': 'plato-fuerte.jpg',
+            'PLATO PRINCIPAL': 'plato-principal.jpg',
             'BEBIDAS': 'bebidas.jpg',
             'ACOMPAÑANTES': 'acompañantes.jpg'
         } %}
 
         <div class="grid-categorias">
             {% for categoria in categorias %}
-                    <a href="{{ url_for('ver_productos_por_categoria', id_categoria=categoria.id_categoria) }}" class="btn-seleccionar">Seleccionar</a>
-                    <img src="{{ url_for('static', filename='Imagenes/' ~ imagenes[categoria.nombre_grupo]) }}" alt="{{ categoria.nombre_grupo }}">
+                <div class="categoria">
+                    {% if categoria.nombre_grupo in imagenes %}
+                        <img src="{{ url_for('static', filename='Imagenes/' ~ imagenes[categoria.nombre_grupo]) }}" alt="{{ categoria.nombre_grupo }}">
+                    {% else %}
+                        <img src="{{ url_for('static', filename='Imagenes/default.jpg') }}" alt="Imagen por defecto">
+                    {% endif %}
                     <h2>{{ categoria.nombre_grupo }}</h2>
-                </a>
+                    <a href="{{ url_for('ver_productos_por_categoria', id_categoria=categoria.id_categoria) }}" class="btn-seleccionar">Seleccionar</a>
+                </div>
             {% endfor %}
         </div>
     </div>
 </body>
 </html>
+
