aplicando decorador para restringir a usuarios no admins, @wraps

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -23,6 +23,9 @@
         <input type="email" name="correo" required><br><br>
 
         <label>Contraseña:</label><br>
+
+        <label for="confirmar">Confirmar contraseña:</label>
+        <input type="password" name="confirmar" required>
        
         <input type="password" name="password" required><br><br>
 
