actualicion de boton logout

--- a/templates/usuarios_admin.html
+++ b/templates/usuarios_admin.html
@@ -43,5 +43,6 @@
     </table>
 
     <a href="{{ url_for('panel_admin') }}">Volver al Panel</a>
+    <a href="{{ url_for('logout') }}">Cerrar sesión</a>
 </body>
 </html>
