--- a/templates/productos.html
+++ b/templates/productos.html
@@ -5,6 +5,7 @@
     <title>{{ categoria.nombre_grupo }} - Productos</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='productos.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="contenedor">
@@ -19,6 +20,7 @@
             {% endfor %}
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
