--- a/templates/admin_productos.html
+++ b/templates/admin_productos.html
@@ -23,6 +23,7 @@
                         <p class="card-text">
                             {{ producto.descripcion }}
                         </p>
+                        <p><strong>Precio:</strong> ${{ producto.valor_producto }}</p>
                         <p class="text-muted">Estado: 
                             {% if producto.activo %}
                                 <span class="text-success">Activo</span>
@@ -30,14 +31,14 @@
                                 <span class="text-danger">Inactivo</span>
                             {% endif %}
                         </p>
-                        <!-- Botón de editar desactivado temporalmente
                         <a href="{{ url_for('editar_producto', id_producto=producto.id_producto) }}" class="btn btn-warning btn-sm">Editar</a>
-                        -->
                         <a href="{{ url_for('eliminar_producto', id=producto.id_producto) }}" class="btn btn-danger btn-sm">Eliminar</a>
                         <a href="{{ url_for('cambiar_estado_producto', id=producto.id_producto) }}" class="btn btn-warning btn-sm">
                             {% if producto.activo %}Desactivar{% else %}Activar{% endif %}
                         </a>
                     </div>
+
+                    
                 </div>
             </div>
             {% endfor %}
