--- a/templates/admin_productos.html
+++ b/templates/admin_productos.html
@@ -17,28 +17,15 @@
             {% for producto in productos %}
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="{{ url_for('static', filename='Imagenes/' ~ producto.categoria.nombre_grupo|lower|replace(' ', '-') ~ '.jpg') }}" class="card-img-top">
+                    <img src="{{ url_for('static', filename='Imagenes/' ~ producto.categoria.nombre_grupo|lower|replace(' ', '-') ~ '.jpg') }}" class="card-img-top" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">{{ producto.nom_producto }}</h5>
                         <p class="card-text">
-                            {{ producto.descripcion }}
+                            <strong>Categoría:</strong> {{ producto.categoria.nombre_grupo }}<br>
+                            <strong>Precio:</strong> ${{ producto.valor_producto }}
                         </p>
-                        <p><strong>Precio:</strong> ${{ producto.valor_producto }}</p>
-                        <p class="text-muted">Estado: 
-                            {% if producto.activo %}
-                                <span class="text-success">Activo</span>
-                            {% else %}
-                                <span class="text-danger">Inactivo</span>
-                            {% endif %}
-                        </p>
-                        <a href="{{ url_for('editar_producto', id_producto=producto.id_producto) }}" class="btn btn-warning btn-sm">Editar</a>
-                        <a href="{{ url_for('eliminar_producto', id=producto.id_producto) }}" class="btn btn-danger btn-sm">Eliminar</a>
-                        <a href="{{ url_for('cambiar_estado_producto', id=producto.id_producto) }}" class="btn btn-warning btn-sm">
-                            {% if producto.activo %}Desactivar{% else %}Activar{% endif %}
-                        </a>
+                        <a href="{{ url_for('editar_producto', id_producto=producto.id_grupo_producto) }}" class="btn btn-warning btn-sm">Editar</a>
                     </div>
-
-                    
                 </div>
             </div>
             {% endfor %}
@@ -52,4 +39,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
