--- a/templates/facturacion.html
+++ b/templates/facturacion.html
@@ -44,7 +44,8 @@
     </form>
 </div>
 
-<script src="{{ url_for('static', filename='facturacion.js') }}"></script>
+<script src="{{ url_for('static', filename='js/facturacion.js') }}"></script>
+
 
 </body>
 </html>
