ruta modulo factura

--- a/templates/panel_admin.html
+++ b/templates/panel_admin.html
@@ -37,6 +37,10 @@
             <a href="{{ url_for('crear_producto') }}" class="list-group-item list-group-item-action text-success">
                 ➕ Crear nuevo Producto
             </a>
+            <a href="{{ url_for('facturar') }}" class="list-group-item list-group-item-action text-primary">
+                💰 Ir al módulo de Facturación
+            </a>
+
         </div>
     </div>
 
