ingresando boton de retorno al panel admin

--- a/templates/facturacion.html
+++ b/templates/facturacion.html
@@ -45,6 +45,7 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/facturacion.js') }}"></script>
+ <a href="{{ url_for('panel_admin') }}" class="btn btn-outline-secondary">Volver al Panel</a>
 
 
 </body>
